# dreamteam-project

./: .env-example  .gitignore  README.md  compose.yml  docker-compose.yaml  nginx.conf
.claude/: CLAUDE.md  settings.local.json
.claude/skills/context7/: SKILL.md
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/app/: crud.py  initial_data.py  main.py  tests_pre_start.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 20ac1e999d19_.py  8e1f3a4b7c2d_expertise_domain.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: expertise.py  login.py  skills.py  users.py
backend/app/core/: config.py  db.py
backend/app/models/: all.py  expertise.py  users.py
backend/app/schemas/: expertise.py  user.py
backend/auth/: RequestModels.py  auth.py  tokenService.py
backend/config/: settings.py
backend/db/: Database.py  DatabaseModels.py
backend/migrations/: env.py  script.py.mako
backend/scripts/: entrypoint.sh  prestart.sh
backend/src/api/v1/routes/: auth.py
backend/src/config/: settings.py
backend/src/core/: __init__.py  database.py  security.py
backend/src/models/: __init__.py  user.py
backend/src/schemas/: __init__.py  auth.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py
backend/tests/unit/: test_security.py
backend/utils/: logger.py
web/: Dockerfile  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts  Описание проекта.txt
web/src/: App.tsx  index.css
web/src/pages/: AuthPage.tsx  (+4 more)
(+13 files in other folders)
